# MyImageCompressor

./: .gitignore  DESIGN_DOCUMENT.md
CSharp/: MedImgCompress.sln
CSharp/src/MedImgCompress.Cli/: MedImgCompress.Cli.csproj  Program.cs
CSharp/src/MedImgCompress.Core/: ImageData.cs  MedImgCompress.Core.csproj
CSharp/src/MedImgCompress.Core/Codec/: CodecFactory.cs  ICodec.cs  Jpeg2000Codec.cs  JpegLsCodec.cs
CSharp/src/MedImgCompress.Core/Config/: CompressionConfig.cs  Enums.cs
CSharp/src/MedImgCompress.Core/Dicom/: DicomFile.cs  DicomTags.cs  DicomWriter.cs
CSharp/src/MedImgCompress.Core/Error/: MedImgException.cs
CSharp/src/MedImgCompress.Core/Pipeline/: CompressionPipeline.cs  CompressionResult.cs
RUST/: Cargo.toml
RUST/src/: lib.rs  main.rs
RUST/src/batch/: file_discovery.rs  job.rs  mod.rs  scheduler.rs
RUST/src/cli/: mod.rs
RUST/src/codec/: jpeg2000.rs  jpegls.rs  mod.rs  traits.rs
RUST/src/config/: mod.rs
RUST/src/dicom/: mod.rs
RUST/src/error/: mod.rs
RUST/src/metrics/: comparator.rs  mod.rs  psnr.rs  ssim.rs
RUST/src/pipeline/: mod.rs
RUST/src/progress/: callback.rs  channel.rs  handler.rs  mod.rs
