[package]
name = "medimg_compress"
version = "0.1.0"
edition = "2021"
authors = ["Medical Imaging Team"]
description = "Medical image compression application supporting DICOM, JPEG 2000, and JPEG-LS"
license = "MIT"
keywords = ["medical", "imaging", "compression", "dicom", "jpeg2000"]
categories = ["multimedia::images", "compression"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# DICOM parsing
dicom = "0.7"
dicom-object = "0.7"
dicom-core = "0.7"
dicom-encoding = "0.7"
dicom-transfer-syntax-registry = "0.7"

# Image handling
image = "0.25"
byteorder = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization/Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress indication
indicatif = "0.17"

# Parallelism
rayon = "1.10"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
